--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ MarkupSafe==2.1.5
 pydantic==2.8.2
 pydantic_core==2.20.1
 python-dotenv==1.0.1
+python-multipart==0.0.9
 PyYAML==6.0.2
 sniffio==1.3.1
 starlette==0.38.2
