--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,52 @@
 annotated-types==0.7.0
 anyio==4.4.0
 blinker==1.8.2
+certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
 fastapi==0.112.2
+filelock==3.15.4
+fsspec==2024.6.1
 h11==0.14.0
 httptools==0.6.1
+huggingface-hub==0.24.6
 idna==3.8
 itsdangerous==2.2.0
 Jinja2==3.1.4
+joblib==1.4.2
+keybert==0.8.5
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
+mpmath==1.3.0
+networkx==3.3
+numpy==2.1.0
+packaging==24.1
+pillow==10.4.0
 pydantic==2.8.2
 pydantic_core==2.20.1
+Pygments==2.18.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.2
+regex==2024.7.24
+requests==2.32.3
+rich==13.7.1
+safetensors==0.4.4
+scikit-learn==1.5.1
+scipy==1.14.1
+sentence-transformers==3.0.1
+setuptools==73.0.1
 sniffio==1.3.1
 starlette==0.38.2
+sympy==1.13.2
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+torch==2.4.0
+tqdm==4.66.5
+transformers==4.44.2
 typing_extensions==4.12.2
+urllib3==2.2.2
 uvicorn==0.30.6
 uvloop==0.20.0
 watchfiles==0.23.0
