--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+dnspython==2.6.1
 fastapi==0.112.2
 filelock==3.15.4
 fsspec==2024.6.1
@@ -26,6 +27,7 @@ pillow==10.4.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+pymongo==4.8.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.2
